force-app/main/default/objects/Contract/fields/billing_day__c.field-meta.xml
<CustomField>
    <fullName>billing_day__c</fullName>
    <label>Día de facturación</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>