force-app/main/default/objects/Contract/fields/Billing_state__c.field-meta.xml
<CustomField>
    <fullName>Billing_state__c</fullName>
    <label>Estado de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gratis/Prueba</fullName>
            </value>
            <value>
                <fullName>Billing Completado</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Periodo Gratis</fullName>
            </value>
            <value>
                <fullName>Repudio</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Método de pago inválido</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>Periodo de Gracia</fullName>
            </value>
            <value>
                <fullName>En Reintento</fullName>
            </value>
            <value>
                <fullName>Pendiente Aceptación</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
                <isActive>false</isActive>
                <label>Activated</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Deleted</fullName>
                <isActive>false</isActive>
                <label>Deleted</label>
            </value>
            <value>
                <fullName>Bogus BillingState</fullName>
                <isActive>false</isActive>
                <label>Estado de facturación falso</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
            <value>
                <fullName>Facturación completada</fullName>
                <isActive>false</isActive>
                <label>Facturación completada</label>
            </value>
            <value>
                <fullName>Método de pago inutilizable</fullName>
                <isActive>false</isActive>
                <label>Método de pago inutilizable</label>
            </value>
            <value>
                <fullName>No se pudo recopilar</fullName>
                <isActive>false</isActive>
                <label>No se pudo recopilar</label>
            </value>
            <value>
                <fullName>Paused</fullName>
                <isActive>false</isActive>
                <label>Paused</label>
            </value>
            <value>
                <fullName>Pendiente de aceptación</fullName>
                <isActive>false</isActive>
                <label>Pendiente de aceptación</label>
            </value>
            <value>
                <fullName>Pending Activation</fullName>
                <isActive>false</isActive>
                <label>Pending Activation</label>
            </value>
            <value>
                <fullName>Pending Pause</fullName>
                <isActive>false</isActive>
                <label>Pending Pause</label>
            </value>
            <value>
                <fullName>Pending cancel</fullName>
                <isActive>false</isActive>
                <label>Pending cancel</label>
            </value>
            <value>
                <fullName>Periodo gratuito</fullName>
                <isActive>false</isActive>
                <label>Periodo gratuito</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <isActive>false</isActive>
                <label>Processing</label>
            </value>
            <value>
                <fullName>Prueba Gratis</fullName>
                <isActive>false</isActive>
                <label>Prueba Gratis</label>
            </value>
            <value>
                <fullName>Prueba1</fullName>
                <isActive>false</isActive>
                <label>Prueba1</label>
            </value>
            <value>
                <fullName>Prueba2</fullName>
                <isActive>false</isActive>
                <label>Prueba2</label>
            </value>
            <value>
                <fullName>Terminado</fullName>
                <isActive>false</isActive>
                <label>Terminado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>