force-app/main/default/objects/Contract/fields/cancel_reason__c.field-meta.xml
<CustomField>
    <fullName>cancel_reason__c</fullName>
    <label>Motivo de cancelación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>