force-app/main/default/objects/Contract/fields/Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Date__c</fullName>
    <label>Fecha de caducidad de tarjeta</label>
    <length>5</length>
    <type>Text</type>
</CustomField>