force-app/main/default/objects/Contract/fields/Cliente_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Cliente_de_baja__c</fullName>
    <formula>Account.Not_Active_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente de baja</label>
    <type>Checkbox</type>
</CustomField>