force-app/main/default/objects/Contract/fields/ContactPersonId__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonId__c</fullName>
    <formula>Account.PersonContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactPersonId</label>
    <type>Text</type>
</CustomField>