force-app/main/default/objects/Contract/fields/Contrato_activo__c.field-meta.xml
<CustomField>
    <fullName>Contrato_activo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contrato activo</label>
    <type>Checkbox</type>
</CustomField>