force-app/main/default/objects/Contract/fields/ContratoActivo__c.field-meta.xml
<CustomField>
    <fullName>ContratoActivo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contrato activo</label>
    <type>Checkbox</type>
</CustomField>