force-app/main/default/objects/Contract/fields/Correo_nuevo__c.field-meta.xml
<CustomField>
    <fullName>Correo_nuevo__c</fullName>
    <label>Correo nuevo</label>
    <type>Email</type>
</CustomField>