force-app/main/default/objects/Contract/fields/credit_card__c.field-meta.xml
<CustomField>
    <fullName>credit_card__c</fullName>
    <label>Tarjeta de crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>