force-app/main/default/objects/Contract/fields/Descripcion_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Campaign__c</fullName>
    <description>Campo se rellena a partir de flow de contract, trae el campo Descripcion Campaign__c del registro más reciente del objeto producto contrato</description>
    <label>Descripcion Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>