force-app/main/default/objects/Contract/fields/Duplicated_Active_Email__c.field-meta.xml
<CustomField>
    <fullName>Duplicated_Active_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicated Active Email</label>
    <type>Checkbox</type>
</CustomField>