force-app/main/default/objects/Contract/fields/email_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>email_de_contrato__c</fullName>
    <label>Email de contrato</label>
    <type>Email</type>
</CustomField>