force-app/main/default/objects/Contract/fields/Email_de_verificacion_enviado__c.field-meta.xml
<CustomField>
    <fullName>Email_de_verificacion_enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para Marketing Cloud</description>
    <label>Email de verificación enviado</label>
    <type>Checkbox</type>
</CustomField>