force-app/main/default/objects/Contract/fields/Email_principal__c.field-meta.xml
<CustomField>
    <fullName>Email_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email principal</label>
    <type>Checkbox</type>
</CustomField>