force-app/main/default/objects/Contract/fields/EmailCliente__c.field-meta.xml
<CustomField>
    <fullName>EmailCliente__c</fullName>
    <label>EmailCliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>