force-app/main/default/objects/Contract/fields/ends__c.field-meta.xml
<CustomField>
    <fullName>ends__c</fullName>
    <label>Términos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>