force-app/main/default/objects/Contract/fields/Estado_de_suscripcion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_suscripcion__c</fullName>
    <label>Estado de suscripción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Pendiente de Activación</fullName>
            </value>
            <value>
                <fullName>Pendiente de Cancelación</fullName>
            </value>
            <value>
                <fullName>Pendiente de Pausa</fullName>
            </value>
            <value>
                <fullName>Pausada</fullName>
            </value>
            <value>
                <fullName>Suspendida</fullName>
            </value>
            <value>
                <fullName>Eliminada</fullName>
            </value>
            <value>
                <fullName>Expirada</fullName>
            </value>
            <value>
                <fullName>Procesando</fullName>
            </value>
            <value>
                <fullName>Actualizada</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
                <isActive>false</isActive>
                <label>Rechazado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>