force-app/main/default/objects/Contract/fields/Fecha_Alta_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Alta_Contrato__c</fullName>
    <label>Fecha alta contrato</label>
    <type>DateTime</type>
</CustomField>