force-app/main/default/objects/Contract/fields/fecha_de_baja__c.field-meta.xml
<CustomField>
    <fullName>fecha_de_baja__c</fullName>
    <label>Fecha de baja suscriptor</label>
    <type>Date</type>
</CustomField>