force-app/main/default/objects/Contract/fields/Fecha_de_baja_ocasional__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_baja_ocasional__c</fullName>
    <description>Almacena  la fecha de baja ocasional</description>
    <label>Fecha baja contrato</label>
    <type>Date</type>
</CustomField>