force-app/main/default/objects/Contract/fields/Fecha_solicitud_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_solicitud_de_baja__c</fullName>
    <description>Almacena fecha de la solicitud de la baja.</description>
    <label>Fecha solicitud de baja suscriptor</label>
    <type>Date</type>
</CustomField>