force-app/main/default/objects/Contract/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Número de contrato Lite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>