force-app/main/default/objects/Contract/fields/Inicio_de_validez_URL__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_validez_URL__c</fullName>
    <label>Inicio de validez URL</label>
    <type>DateTime</type>
</CustomField>