force-app/main/default/objects/Contract/fields/IsNewURL__c.field-meta.xml
<CustomField>
    <fullName>IsNewURL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nueva URL</label>
    <type>Checkbox</type>
</CustomField>