force-app/main/default/objects/Contract/fields/Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Mensaje__c</fullName>
    <label>Mensaje de error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>