force-app/main/default/objects/Contract/fields/Mensaje_de_error__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_de_error__c</fullName>
    <label>Mensaje de error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>