force-app/main/default/objects/Contract/fields/Mes_baja__c.field-meta.xml
<CustomField>
    <fullName>Mes_baja__c</fullName>
    <formula>CASE(
  MONTH(fecha_de_baja__c),  
  1, &quot;Enero&quot;,
  2, &quot;Febrero&quot;,
  3, &quot;Marzo&quot;,
  4, &quot;Abril&quot;,
  5, &quot;Mayo&quot;,
  6, &quot;Junio&quot;,
  7, &quot;Julio&quot;,
  8, &quot;Agosto&quot;,
  9, &quot;Septiembre&quot;,
  10, &quot;Octubre&quot;,
  11, &quot;Noviembre&quot;,
  &quot;Diciembre&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes baja</label>
    <type>Text</type>
</CustomField>