force-app/main/default/objects/Contract/fields/most_recent_billing__c.field-meta.xml
<CustomField>
    <fullName>most_recent_billing__c</fullName>
    <label>Facturación más reciente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>