force-app/main/default/objects/Contract/fields/Motivo_de_cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cancelacion__c</fullName>
    <label>Motivo de cancelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traspasado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>