force-app/main/default/objects/Contract/fields/Name_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Name_Campaign__c</fullName>
    <label>Name Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>