force-app/main/default/objects/Contract/fields/Numero_telefono__c.field-meta.xml
<CustomField>
    <fullName>Numero_telefono__c</fullName>
    <label>Número de teléfono</label>
    <type>Phone</type>
</CustomField>