force-app/main/default/objects/Contract/fields/paypal__c.field-meta.xml
<CustomField>
    <fullName>paypal__c</fullName>
    <label>Usuario paypal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>