force-app/main/default/objects/Contract/fields/Tarjeta_de_credito__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_de_credito__c</fullName>
    <label>Tarjeta de credito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>