force-app/main/default/objects/Contract/fields/Telefono_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Telefono_de_contrato__c</fullName>
    <label>Télefono de contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>