force-app/main/default/objects/Contract/fields/Telefono_principal__c.field-meta.xml
<CustomField>
    <fullName>Telefono_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teléfono principal</label>
    <type>Checkbox</type>
</CustomField>