force-app/main/default/objects/Contract/fields/Tipo_de_codigo_promocional__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_codigo_promocional__c</fullName>
    <label>Tipo de codigo promocional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Código descuento</fullName>
            </value>
            <value>
                <fullName>Tarjeta regalo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>