force-app/main/default/objects/Contract/fields/URL_path_encriptada__c.field-meta.xml
<CustomField>
    <fullName>URL_path_encriptada__c</fullName>
    <label>URL_path_encriptada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>