force-app/main/default/objects/Contract/fields/URL_raiz_verificacion__c.field-meta.xml
<CustomField>
    <fullName>URL_raiz_verificacion__c</fullName>
    <label>URL raiz verificacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>