force-app/main/default/objects/Contract/fields/URL_verificacion__c.field-meta.xml
<CustomField>
    <fullName>URL_verificacion__c</fullName>
    <label>URL de verificación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>