force-app/main/default/objects/Contract/validationRules/AgenteATCnombreCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>AgenteATCnombreCliente</fullName>
    <active>false</active>
    <description>Impide que el perfil de agenteATC pueda modificar el campo Status</description>
    <errorConditionFormula>IF(CONTAINS($Profile.Name, &apos;Agente ATC&apos;) &amp;&amp; ISCHANGED( AccountId ), true, false)</errorConditionFormula>
    <errorMessage>No se puede editar el campo del nombre del cliente.</errorMessage>
</ValidationRule>