force-app/main/default/objects/Contract/validationRules/AgenteATCnombreContrato.validationRule-meta.xml
<ValidationRule>
    <fullName>AgenteATCnombreContrato</fullName>
    <active>true</active>
    <errorConditionFormula>IF(CONTAINS($Profile.Name, &apos;Agente ATC&apos;) &amp;&amp; ISCHANGED(Name), true, false)</errorConditionFormula>
    <errorMessage>No se puede editar el campo del nombre del Contrato.</errorMessage>
</ValidationRule>