force-app/main/default/objects/Contract/validationRules/AgenteATCstatus.validationRule-meta.xml
<ValidationRule>
    <fullName>AgenteATCstatus</fullName>
    <active>false</active>
    <description>impide que el perfil de agenteATC pueda modificar el campo Status</description>
    <errorConditionFormula>IF(CONTAINS($Profile.Name, &apos;Agente ATC&apos;)  &amp;&amp; ISCHANGED(Status), true, false)</errorConditionFormula>
    <errorMessage>No se puede editar el campo del estado.</errorMessage>
</ValidationRule>