force-app/main/default/objects/Contract/validationRules/BillingDate_Entre_1_31.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingDate_Entre_1_31</fullName>
    <active>false</active>
    <errorConditionFormula>0 &lt; billing_day__c  &amp;&amp; billing_day__c  &lt; 32</errorConditionFormula>
    <errorDisplayField>billing_day__c</errorDisplayField>
    <errorMessage>Incorporar un día de mes apropiado</errorMessage>
</ValidationRule>