force-app/main/default/objects/Contract/validationRules/Duplicated_Active_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicated_Active_Email</fullName>
    <active>true</active>
    <description>Control para evitar la creación de contratos con el mismo correo electronico.</description>
    <errorConditionFormula>Duplicated_Active_Email__c</errorConditionFormula>
    <errorMessage>No es posible convertir el Lead. Ya existe un contrato activo con este correo electrónico.</errorMessage>
</ValidationRule>