force-app/main/default/objects/Contract/validationRules/EvitarCambioStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>EvitarCambioStatus</fullName>
    <active>false</active>
    <description>Evitar que se cambie de estado</description>
    <errorConditionFormula>AND(
     BypassValidation__c = true,
    ISCHANGED( Status )
    )</errorConditionFormula>
    <errorMessage>No se puede cambiar el estado del contrato</errorMessage>
</ValidationRule>